Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,60 @@
     */
     const newsData = [
   {
+    "title": "Sai phạm trong cấp đất biệt thự Măng Đen, cựu chủ tịch huyện bị khởi tố",
+    "content": "Cựu chủ tịch UBND huyện Kon Plông, ông Đặng Thanh Nam, đã bị khởi tố hình sự vì có sai phạm trong việc cấp đất cho khu biệt thự Măng Đen. Cùng với ông Bùi Thanh Phong, cựu trưởng Phòng Tài nguyên và Môi trường, hai người này đã vi phạm quy định pháp luật trong việc giao đất không thông qua đấu giá và cấp giấy chứng nhận quyền sử dụng đất. Hành vi của họ đã gây thất thoát tài sản nhà nước và làm giảm uy tín của chính quyền địa phương.",
+    "link": "https://tuoitre.vn/sai-pham-trong-cap-dat-biet-thu-mang-den-cuu-chu-tich-huyen-bi-khoi-to-2025032009580237.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao cựu chủ tịch huyện Kon Plông bị khởi tố?",
+    "answers": [
+      {
+        "text": "Vì sai phạm trong cấp đất biệt thự Măng Đen.",
+        "correct": true
+      },
+      {
+        "text": "Vì tham nhũng trong ngân sách huyện.",
+        "correct": false
+      },
+      {
+        "text": "Vì vi phạm quy định về giao thông.",
+        "correct": false
+      },
+      {
+        "text": "Vì không hoàn thành nghĩa vụ tài chính.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tương lai bấp bênh của AUKUS dưới thời Tổng thống Trump",
+    "content": "Tương lai của AUKUS dưới thời Tổng thống Trump đang trở nên bấp bênh với nhiều thách thức mới. Chính quyền Trump 2.0 đã đặt ra yêu cầu các đồng minh, bao gồm Australia, phải gia tăng ngân sách quốc phòng và tự chịu trách nhiệm về an ninh của mình. Các cam kết trước đó về việc cung cấp tàu ngầm hạt nhân cho Australia đang bị xem xét lại, dẫn đến lo lắng về khả năng quốc phòng của Canberra. Tuy nhiên, AUKUS vẫn có thể tồn tại thông qua việc chuyển hướng tập trung vào hợp tác công nghệ tiên tiến.",
+    "link": "https://dantri.com.vn/the-gioi/tuong-lai-bap-benh-cua-aukus-duoi-thoi-tong-thong-trump-20250320092352896.htm",
+    "cat": "the-gioi",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tương lai của AUKUS dưới thời Tổng thống Trump như thế nào?",
+    "answers": [
+      {
+        "text": "Bấp bênh với nhiều thách thức mới",
+        "correct": true
+      },
+      {
+        "text": "Rất ổn định và phát triển mạnh mẽ",
+        "correct": false
+      },
+      {
+        "text": "Không thay đổi gì so với trước đây",
+        "correct": false
+      },
+      {
+        "text": "Củng cố mối quan hệ với các đồng minh châu Âu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "\"Hoàng tử điện ảnh\" Timothée trở nên lòe loẹt khi yêu bạn gái triệu phú USD",
     "content": "Timothée Chalamet, một trong những nam diễn viên được yêu thích nhất Hollywood, đã thay đổi phong cách thời trang của mình từ thanh lịch sang màu mè, sặc sỡ kể từ khi hẹn hò với triệu phú Kylie Jenner. Mặc dù từng được ca ngợi với gu thời trang tinh tế, nhưng giờ đây, Timothée thường xuyên xuất hiện trong những bộ trang phục nổi bật nhưng thiếu sự thanh lịch. Mối quan hệ của họ nhận được sự quan tâm lớn từ công chúng, nhưng phong cách của Timothée lại gây ra nhiều ý kiến trái chiều.",
     "link": "https://dantri.com.vn/giai-tri/hoang-tu-dien-anh-timothee-tro-nen-loe-loet-khi-yeu-ban-gai-trieu-phu-usd-20250319165318720.htm",
@@ -1325,28 +1379,28 @@
     ]
   },
   {
-    "title": "Hai con của Từ Hy Viên vắng mặt trong tang lễ của mẹ",
-    "content": "Nữ diễn viên Từ Hy Viên đã qua đời và được an táng tại Nghĩa trang Kim Bảo Sơn ở Đài Loan. Tang lễ của cô diễn ra với sự tham gia của chồng hiện tại và gia đình, nhưng hai con của nữ diễn viên không có mặt. Mẹ kế của các con cho biết không nhận được thông báo về tang lễ, dẫn đến việc hai bé không thể tiễn đưa mẹ. Tình trạng này đã gây ra nhiều tranh cãi trên mạng xã hội.",
-    "link": "https://dantri.com.vn/giai-tri/hai-con-cua-tu-hy-vien-vang-mat-trong-tang-le-cua-me-20250319172644395.htm",
-    "cat": "gia-dinh",
+    "title": "Mất cơ hội chữa khỏi ung thư vì khám sai nơi",
+    "content": "Ông Thành, 63 tuổi, phát hiện ung thư tuyến tiền liệt giai đoạn muộn do không được tư vấn đúng khi xét nghiệm PSA cao nhưng không được kiểm tra thêm. Mặc dù đã phẫu thuật cắt tuyến tiền liệt, ông phải đối mặt với ung thư tái phát và lựa chọn giữa cắt bỏ tinh hoàn hoặc dùng liệu pháp nội tiết tố tốn kém và có nhiều tác dụng phụ. Nếu được phát hiện sớm, tỷ lệ chữa khỏi ung thư tuyến tiền liệt có thể lên tới 100%, nhưng hiện tại, khoảng 75-80% bệnh nhân đến khám khi đã ở giai đoạn muộn.",
+    "link": "https://vnexpress.net/mat-co-hoi-chua-khoi-ung-thu-vi-kham-sai-noi-4861903.html",
+    "cat": "suc-khoe",
     "positivity": 3,
     "importance": 8,
-    "question": "Tại sao hai con của Từ Hy Viên không tham dự tang lễ của mẹ?",
+    "question": "Tại sao ông Thành mất cơ hội chữa khỏi ung thư tuyến tiền liệt?",
     "answers": [
       {
-        "text": "Vì không nhận được thông báo về tang lễ.",
+        "text": "Vì không được xét nghiệm PSA khi có chỉ số cao.",
         "correct": true
       },
       {
-        "text": "Vì các con đang ở Đài Loan.",
+        "text": "Vì ông không có triệu chứng rõ ràng.",
         "correct": false
       },
       {
-        "text": "Vì các con không muốn đi.",
+        "text": "Vì bệnh viện không đủ trang thiết bị.",
         "correct": false
       },
       {
-        "text": "Vì các con đang ở với ông bà.",
+        "text": "Vì ông không đi khám định kỳ.",
         "correct": false
       }
     ]
@@ -1410,28 +1464,28 @@
     ]
   },
   {
-    "title": "Mất cơ hội chữa khỏi ung thư vì khám sai nơi",
-    "content": "Ông Thành, 63 tuổi, phát hiện ung thư tuyến tiền liệt giai đoạn muộn do không được tư vấn đúng khi xét nghiệm PSA cao nhưng không được kiểm tra thêm. Mặc dù đã phẫu thuật cắt tuyến tiền liệt, ông phải đối mặt với ung thư tái phát và lựa chọn giữa cắt bỏ tinh hoàn hoặc dùng liệu pháp nội tiết tố tốn kém và có nhiều tác dụng phụ. Nếu được phát hiện sớm, tỷ lệ chữa khỏi ung thư tuyến tiền liệt có thể lên tới 100%, nhưng hiện tại, khoảng 75-80% bệnh nhân đến khám khi đã ở giai đoạn muộn.",
-    "link": "https://vnexpress.net/mat-co-hoi-chua-khoi-ung-thu-vi-kham-sai-noi-4861903.html",
-    "cat": "suc-khoe",
+    "title": "Hai con của Từ Hy Viên vắng mặt trong tang lễ của mẹ",
+    "content": "Nữ diễn viên Từ Hy Viên đã qua đời và được an táng tại Nghĩa trang Kim Bảo Sơn ở Đài Loan. Tang lễ của cô diễn ra với sự tham gia của chồng hiện tại và gia đình, nhưng hai con của nữ diễn viên không có mặt. Mẹ kế của các con cho biết không nhận được thông báo về tang lễ, dẫn đến việc hai bé không thể tiễn đưa mẹ. Tình trạng này đã gây ra nhiều tranh cãi trên mạng xã hội.",
+    "link": "https://dantri.com.vn/giai-tri/hai-con-cua-tu-hy-vien-vang-mat-trong-tang-le-cua-me-20250319172644395.htm",
+    "cat": "gia-dinh",
     "positivity": 3,
     "importance": 8,
-    "question": "Tại sao ông Thành mất cơ hội chữa khỏi ung thư tuyến tiền liệt?",
+    "question": "Tại sao hai con của Từ Hy Viên không tham dự tang lễ của mẹ?",
     "answers": [
       {
-        "text": "Vì không được xét nghiệm PSA khi có chỉ số cao.",
+        "text": "Vì không nhận được thông báo về tang lễ.",
         "correct": true
       },
       {
-        "text": "Vì ông không có triệu chứng rõ ràng.",
+        "text": "Vì các con đang ở Đài Loan.",
         "correct": false
       },
       {
-        "text": "Vì bệnh viện không đủ trang thiết bị.",
+        "text": "Vì các con không muốn đi.",
         "correct": false
       },
       {
-        "text": "Vì ông không đi khám định kỳ.",
+        "text": "Vì các con đang ở với ông bà.",
         "correct": false
       }
     ]
@@ -1692,28 +1746,28 @@
     ]
   },
   {
-    "title": "5 người thoát chết khi ôtô lao xuống sông vì theo Google Maps",
-    "content": "Một gia đình gồm 5 người đã thoát chết khi chiếc ôtô của họ lao xuống sông Gayathripuzha, Ấn Độ, do tuân theo hướng dẫn của Google Maps. Sự việc xảy ra vào lúc 19h30 ngày 16/3 khi họ đang trở về từ chuyến đi mua sắm. Mặc dù ôtô chìm hơn một nửa dưới nước, nhưng may mắn là tất cả các thành viên trong gia đình đều không bị thương. Tai nạn này đã làm dấy lên lo ngại về độ tin cậy của các ứng dụng định vị trong việc chỉ đường, đặc biệt ở những khu vực hạ tầng giao thông kém phát triển.",
-    "link": "https://vnexpress.net/5-nguoi-thoat-chet-khi-oto-lao-xuong-song-vi-theo-google-maps-4863161.html",
-    "cat": "oto-xe-may",
+    "title": "Một ngày luyện trình diễn tiêm kích Su-30MK2",
+    "content": "Vào sáng 18/3, tại sân bay Biên Hoà, Đồng Nai, các phi công đã thực hiện buổi huấn luyện trình diễn cho tiêm kích Su-30MK2, chuẩn bị cho sự kiện vào ngày 30/4. Trong buổi tập, các phi công phải thực hiện các động tác bay phức tạp và kiểm tra kỹ lưỡng các thiết bị trước khi cất cánh. Su-30MK2 là máy bay chiến đấu hiện đại nhất của quân đội Việt Nam, được trang bị nhiều loại vũ khí và có khả năng bay với tốc độ cao. Buổi tập này là một phần trong kế hoạch chuẩn bị cho màn trình diễn lớn vào dịp lễ sắp tới.",
+    "link": "https://vnexpress.net/mot-ngay-luyen-trinh-dien-tiem-kich-su-30mk2-4863011.html",
+    "cat": "thoi-su",
     "positivity": 8,
-    "importance": 6,
-    "question": "Tai nạn ôtô lao xuống sông xảy ra ở đâu?",
+    "importance": 7,
+    "question": "Lý do nào khiến các phi công huấn luyện tiêm kích Su-30MK2 tại Đồng Nai?",
     "answers": [
       {
-        "text": "sông Gayathripuzha, Ấn Độ",
+        "text": "Chuẩn bị cho buổi trình diễn vào ngày 30/4",
         "correct": true
       },
       {
-        "text": "sông Hàn, Đà Nẵng",
+        "text": "Để kiểm tra kỹ thuật máy bay",
         "correct": false
       },
       {
-        "text": "sông Thames, Anh",
+        "text": "Để thực hiện các bài tập thể lực",
         "correct": false
       },
       {
-        "text": "sông Mekong, Việt Nam",
+        "text": "Để tham dự một cuộc thi quốc tế",
         "correct": false
       }
     ]
@@ -1746,28 +1800,28 @@
     ]
   },
   {
-    "title": "Một ngày luyện trình diễn tiêm kích Su-30MK2",
-    "content": "Vào sáng 18/3, tại sân bay Biên Hoà, Đồng Nai, các phi công đã thực hiện buổi huấn luyện trình diễn cho tiêm kích Su-30MK2, chuẩn bị cho sự kiện vào ngày 30/4. Trong buổi tập, các phi công phải thực hiện các động tác bay phức tạp và kiểm tra kỹ lưỡng các thiết bị trước khi cất cánh. Su-30MK2 là máy bay chiến đấu hiện đại nhất của quân đội Việt Nam, được trang bị nhiều loại vũ khí và có khả năng bay với tốc độ cao. Buổi tập này là một phần trong kế hoạch chuẩn bị cho màn trình diễn lớn vào dịp lễ sắp tới.",
-    "link": "https://vnexpress.net/mot-ngay-luyen-trinh-dien-tiem-kich-su-30mk2-4863011.html",
-    "cat": "thoi-su",
+    "title": "5 người thoát chết khi ôtô lao xuống sông vì theo Google Maps",
+    "content": "Một gia đình gồm 5 người đã thoát chết khi chiếc ôtô của họ lao xuống sông Gayathripuzha, Ấn Độ, do tuân theo hướng dẫn của Google Maps. Sự việc xảy ra vào lúc 19h30 ngày 16/3 khi họ đang trở về từ chuyến đi mua sắm. Mặc dù ôtô chìm hơn một nửa dưới nước, nhưng may mắn là tất cả các thành viên trong gia đình đều không bị thương. Tai nạn này đã làm dấy lên lo ngại về độ tin cậy của các ứng dụng định vị trong việc chỉ đường, đặc biệt ở những khu vực hạ tầng giao thông kém phát triển.",
+    "link": "https://vnexpress.net/5-nguoi-thoat-chet-khi-oto-lao-xuong-song-vi-theo-google-maps-4863161.html",
+    "cat": "oto-xe-may",
     "positivity": 8,
-    "importance": 7,
-    "question": "Lý do nào khiến các phi công huấn luyện tiêm kích Su-30MK2 tại Đồng Nai?",
+    "importance": 6,
+    "question": "Tai nạn ôtô lao xuống sông xảy ra ở đâu?",
     "answers": [
       {
-        "text": "Chuẩn bị cho buổi trình diễn vào ngày 30/4",
+        "text": "sông Gayathripuzha, Ấn Độ",
         "correct": true
       },
       {
-        "text": "Để kiểm tra kỹ thuật máy bay",
+        "text": "sông Hàn, Đà Nẵng",
         "correct": false
       },
       {
-        "text": "Để thực hiện các bài tập thể lực",
+        "text": "sông Thames, Anh",
         "correct": false
       },
       {
-        "text": "Để tham dự một cuộc thi quốc tế",
+        "text": "sông Mekong, Việt Nam",
         "correct": false
       }
     ]
@@ -2809,28 +2863,32 @@
     ]
   },
   {
-    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
-    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
-    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
     "answers": [
       {
-        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
+        "text": "Khó thở và ho khan kéo dài",
         "correct": true
       },
       {
-        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
+        "text": "Đau đầu và chóng mặt",
         "correct": false
       },
       {
-        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
+        "text": "Nôn mửa và tiêu chảy",
         "correct": false
       },
       {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
         "correct": false
       }
     ]
@@ -2863,32 +2921,28 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
+    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
+    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
     "answers": [
       {
-        "text": "Khó thở và ho khan kéo dài",
+        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
         "correct": true
       },
       {
-        "text": "Đau đầu và chóng mặt",
+        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
         "correct": false
       },
       {
-        "text": "Nôn mửa và tiêu chảy",
+        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
         "correct": false
       },
       {
-        "text": "Mệt mỏi và sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và khó tiêu",
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
         "correct": false
       }
     ]
