Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,64 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "5 thực phẩm hỗ trợ làm trắng răng",
+    "content": "Bài viết giới thiệu 5 thực phẩm giúp làm trắng răng tự nhiên bao gồm dâu tây, dưa hấu, dứa, đu đủ và sữa. Dâu tây chứa axit malic có tác dụng tẩy trắng, trong khi dưa hấu giúp làm sạch chân răng và thúc đẩy sản xuất nước bọt. Dứa và đu đủ có các enzyme giúp phân hủy protein, giảm ố vàng răng. Sữa với axit lactic cũng hỗ trợ làm sạch vi khuẩn và ngăn ngừa mảng bám.",
+    "link": "https://vnexpress.net/5-thuc-pham-ho-tro-lam-trang-rang-4863563.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những thực phẩm nào hỗ trợ làm trắng răng?",
+    "answers": [
+      {
+        "text": "Dâu tây, dưa hấu, dứa, đu đủ, sữa",
+        "correct": true
+      },
+      {
+        "text": "Chỉ có dâu tây",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có sữa",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có dưa hấu",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có đu đủ",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nio và CATL xây dựng mạng lưới đổi pin ôtô điện lớn nhất thế giới",
+    "content": "Nio và CATL đã ký kết thỏa thuận hợp tác vào ngày 17/3 tại Phúc Kiến để xây dựng mạng lưới đổi pin ôtô điện lớn nhất thế giới. Hợp tác này nhằm tiêu chuẩn hóa công nghệ và nâng cao khả năng chia sẻ dịch vụ đổi pin. CATL sẽ đầu tư 2,5 tỷ nhân dân tệ vào Nio Power, giúp cải thiện hiệu quả và giảm chi phí trong chuỗi giá trị xe năng lượng mới. Nio hiện có mạng lưới đổi pin lớn nhất với hơn 3.172 trạm hoạt động.",
+    "link": "https://vnexpress.net/nio-va-catl-xay-dung-mang-luoi-doi-pin-oto-dien-lon-nhat-the-gioi-4863305.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Nio và CATL đang hợp tác để làm gì?",
+    "answers": [
+      {
+        "text": "Xây dựng mạng lưới đổi pin ôtô điện lớn nhất thế giới",
+        "correct": true
+      },
+      {
+        "text": "Cải thiện hiệu suất xe điện",
+        "correct": false
+      },
+      {
+        "text": "Giảm giá thành sản xuất xe",
+        "correct": false
+      },
+      {
+        "text": "Nâng cao chất lượng pin xe điện",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sai phạm trong cấp đất biệt thự Măng Đen, cựu chủ tịch huyện bị khởi tố",
     "content": "Cựu chủ tịch UBND huyện Kon Plông, ông Đặng Thanh Nam, đã bị khởi tố hình sự vì có sai phạm trong việc cấp đất cho khu biệt thự Măng Đen. Cùng với ông Bùi Thanh Phong, cựu trưởng Phòng Tài nguyên và Môi trường, hai người này đã vi phạm quy định pháp luật trong việc giao đất không thông qua đấu giá và cấp giấy chứng nhận quyền sử dụng đất. Hành vi của họ đã gây thất thoát tài sản nhà nước và làm giảm uy tín của chính quyền địa phương.",
     "link": "https://tuoitre.vn/sai-pham-trong-cap-dat-biet-thu-mang-den-cuu-chu-tich-huyen-bi-khoi-to-2025032009580237.htm",
@@ -170,6 +228,60 @@
       },
       {
         "text": "Vì không hoàn thành nghĩa vụ tài chính.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bé gái bỏng do nghịch vòi nước nóng lạnh",
+    "content": "Bé Hà, 3 tuổi, đã bị bỏng do nghịch vòi nước nóng lạnh trong khi tắm, dẫn đến bỏng ở lưng và mông. Sau khi được điều trị tại bệnh viện Đa khoa Tâm Anh TP HCM, bé hồi phục tốt sau 4 ngày điều trị với vết thương đã lên da non. Bác sĩ khuyến cáo phụ huynh cần cẩn trọng trong việc phòng ngừa bỏng cho trẻ nhỏ, đồng thời hướng dẫn cách sơ cứu khi trẻ bị bỏng.",
+    "link": "https://vnexpress.net/be-gai-bong-do-nghich-voi-nuoc-nong-lanh-4863556.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé Hà bị bỏng do nguyên nhân gì?",
+    "answers": [
+      {
+        "text": "Nghịch vòi nước nóng lạnh",
+        "correct": true
+      },
+      {
+        "text": "Chơi với lửa",
+        "correct": false
+      },
+      {
+        "text": "Ngã vào bếp",
+        "correct": false
+      },
+      {
+        "text": "Ngồi gần bếp lửa",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mổ cắt u ung thư kết hợp tái tạo ngực",
+    "content": "Bà Loan, 48 tuổi, đã được phẫu thuật cắt u ung thư vú kết hợp với tái tạo ngực tại Bệnh viện Đa khoa Tâm Anh Hà Nội. Bác sĩ đã thực hiện phẫu thuật bảo tồn vú nhằm loại bỏ khối u mà vẫn giữ lại phần lớn tuyến vú, đồng thời đặt túi ngực tạo hình thẩm mỹ. Phương pháp phẫu thuật \"một thì\" này giúp giảm thiểu thời gian điều trị và tăng cường hiệu quả điều trị cho bệnh nhân ung thư vú giai đoạn sớm.",
+    "link": "https://vnexpress.net/mo-cat-u-ung-thu-ket-hop-tai-tao-nguc-4863540.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Phương pháp phẫu thuật nào đã được áp dụng cho bà Loan để điều trị ung thư vú?",
+    "answers": [
+      {
+        "text": "Phẫu thuật cắt u ung thư kết hợp tái tạo ngực",
+        "correct": true
+      },
+      {
+        "text": "Phẫu thuật chỉ cắt u ung thư",
+        "correct": false
+      },
+      {
+        "text": "Phẫu thuật đặt túi ngực mà không cắt u",
+        "correct": false
+      },
+      {
+        "text": "Phẫu thuật hóa trị liệu",
         "correct": false
       }
     ]
@@ -255,6 +367,37 @@
       },
       {
         "text": "Củng cố mối quan hệ với các đồng minh châu Âu",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thiếu máu sau sinh mổ: Coi chừng khuyết sẹo tử cung",
+    "content": "Nhiều phụ nữ sau sinh mổ gặp phải tình trạng thiếu máu, thường do khuyết sẹo tử cung gây rò rỉ máu. Bài viết nêu lên trường hợp của một nữ Việt kiều Mỹ bị thiếu sắt nặng sau khi sinh mổ và những triệu chứng sức khỏe suy giảm. Sau khi khám tại Việt Nam, bác sĩ phát hiện khuyết sẹo mổ và điều trị đã giúp cải thiện tình trạng. Thiếu sắt ảnh hưởng nghiêm trọng đến sức khỏe tổng thể, vì vậy phụ nữ sau sinh mổ cần khám kịp thời nếu có triệu chứng bất thường.",
+    "link": "https://vnexpress.net/thieu-mau-met-moi-sau-sinh-mo-coi-chung-khuyet-seo-tu-cung-4863014.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Thiếu máu sau sinh mổ có thể do nguyên nhân gì?",
+    "answers": [
+      {
+        "text": "Khuyết sẹo tử cung",
+        "correct": true
+      },
+      {
+        "text": "Thiếu vitamin C",
+        "correct": false
+      },
+      {
+        "text": "Mất nước",
+        "correct": false
+      },
+      {
+        "text": "Căng thẳng tâm lý",
+        "correct": false
+      },
+      {
+        "text": "Thiếu dinh dưỡng tổng thể",
         "correct": false
       }
     ]
@@ -399,33 +542,6 @@
     ]
   },
   {
-    "title": "Đồng hồ thông minh hỗ trợ người dùng nâng cao chất lượng sống",
-    "content": "Đồng hồ thông minh ngày càng trở thành công cụ hỗ trợ chăm sóc sức khỏe, giúp người dùng theo dõi thể chất, giấc ngủ và tối ưu hóa quá trình tập luyện. Theo báo cáo, 73% người dùng đồng hồ thông minh sử dụng các tính năng theo dõi sức khỏe để điều chỉnh cường độ tập luyện và phát hiện sớm các dấu hiệu bất thường. Garmin, một trong những thương hiệu hàng đầu, không ngừng cải tiến sản phẩm và phát triển các tính năng mới để đáp ứng nhu cầu của người dùng, góp phần nâng cao chất lượng sống.",
-    "link": "https://vnexpress.net/dong-ho-thong-minh-ho-tro-nguoi-dung-nang-cao-chat-luong-song-4863418.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Đồng hồ thông minh hỗ trợ người dùng nâng cao chất lượng sống như thế nào?",
-    "answers": [
-      {
-        "text": "Bằng cách theo dõi sức khỏe và cải thiện giấc ngủ.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ báo thời gian hàng ngày.",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp thông tin thời tiết.",
-        "correct": false
-      },
-      {
-        "text": "Giúp người dùng giao tiếp tốt hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Điều trị hói đầu như thế nào?",
     "content": "Bài viết cung cấp thông tin về các phương pháp điều trị hói đầu, bao gồm sử dụng thuốc uống, thuốc xịt, liệu pháp tiêm PRP và laser 4D. Thời gian điều trị có thể từ 2-12 tháng tùy thuộc vào nguyên nhân và phương pháp được chọn. Nếu các phương pháp không hiệu quả, cấy tóc có thể là lựa chọn cuối cùng. Để đạt được kết quả tốt nhất, người bệnh nên tham khảo ý kiến bác sĩ chuyên khoa và thực hiện chế độ chăm sóc tóc hợp lý.",
     "link": "https://vnexpress.net/dieu-tri-hoi-dau-nhu-the-nao-4863306.html",
@@ -479,6 +595,33 @@
       },
       {
         "text": "Do di truyền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đồng hồ thông minh hỗ trợ người dùng nâng cao chất lượng sống",
+    "content": "Đồng hồ thông minh ngày càng trở thành công cụ hỗ trợ chăm sóc sức khỏe, giúp người dùng theo dõi thể chất, giấc ngủ và tối ưu hóa quá trình tập luyện. Theo báo cáo, 73% người dùng đồng hồ thông minh sử dụng các tính năng theo dõi sức khỏe để điều chỉnh cường độ tập luyện và phát hiện sớm các dấu hiệu bất thường. Garmin, một trong những thương hiệu hàng đầu, không ngừng cải tiến sản phẩm và phát triển các tính năng mới để đáp ứng nhu cầu của người dùng, góp phần nâng cao chất lượng sống.",
+    "link": "https://vnexpress.net/dong-ho-thong-minh-ho-tro-nguoi-dung-nang-cao-chat-luong-song-4863418.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Đồng hồ thông minh hỗ trợ người dùng nâng cao chất lượng sống như thế nào?",
+    "answers": [
+      {
+        "text": "Bằng cách theo dõi sức khỏe và cải thiện giấc ngủ.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ báo thời gian hàng ngày.",
+        "correct": false
+      },
+      {
+        "text": "Cung cấp thông tin thời tiết.",
+        "correct": false
+      },
+      {
+        "text": "Giúp người dùng giao tiếp tốt hơn.",
         "correct": false
       }
     ]
@@ -1114,28 +1257,28 @@
     ]
   },
   {
-    "title": "Xu hướng 'nghỉ việc trả thù' của Gen Z Mỹ",
-    "content": "Nhiều nhân viên Gen Z tại Mỹ đang theo xu hướng 'nghỉ việc trả thù', tức là họ cố tình xin nghỉ việc vào những thời điểm bận rộn nhất của công ty để gây rối loạn cho doanh nghiệp. Các nhân viên này thường nghỉ việc mà không thông báo trước, phản ánh sự bất mãn với cách quản lý và điều kiện làm việc. Theo khảo sát, 65% nhân viên cảm thấy mất động lực trong công việc, trong khi 83% Gen Z đang phải đối mặt với tình trạng kiệt sức, dẫn đến việc nghỉ việc như một cách phản kháng. Các chuyên gia khuyên rằng thay vì bỏ việc một cách bốc đồng, nhân viên nên tìm cách giao tiếp cởi mở với cấp trên.",
-    "link": "https://vnexpress.net/xu-huong-nghi-viec-tra-thu-cua-gen-z-my-4863307.html",
-    "cat": "thoi-su",
-    "positivity": 3,
+    "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
+    "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
+    "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
     "importance": 7,
-    "question": "Xu hướng 'nghỉ việc trả thù' của Gen Z Mỹ có nguyên nhân gì?",
+    "question": "Tại sao CX-5 và Territory lại chiếm ưu thế trong phân khúc CUV cỡ C?",
     "answers": [
       {
-        "text": "Sự bất mãn với cách quản lý",
+        "text": "CX-5 và Territory có doanh số cao và thị phần lớn.",
         "correct": true
       },
       {
-        "text": "Thiếu cơ hội thăng tiến",
+        "text": "Các đối thủ đều có doanh số tốt hơn.",
         "correct": false
       },
       {
-        "text": "Mong muốn tìm kiếm việc làm mới",
+        "text": "CX-5 không còn sản xuất nữa.",
         "correct": false
       },
       {
-        "text": "Chỉ đơn giản là thích nghỉ việc",
+        "text": "Territory là mẫu xe mới nhất trên thị trường.",
         "correct": false
       }
     ]
@@ -1167,33 +1310,6 @@
       },
       {
         "text": "Y tế và công nghệ sinh học",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
-    "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
-    "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao CX-5 và Territory lại chiếm ưu thế trong phân khúc CUV cỡ C?",
-    "answers": [
-      {
-        "text": "CX-5 và Territory có doanh số cao và thị phần lớn.",
-        "correct": true
-      },
-      {
-        "text": "Các đối thủ đều có doanh số tốt hơn.",
-        "correct": false
-      },
-      {
-        "text": "CX-5 không còn sản xuất nữa.",
-        "correct": false
-      },
-      {
-        "text": "Territory là mẫu xe mới nhất trên thị trường.",
         "correct": false
       }
     ]
@@ -1248,6 +1364,33 @@
       },
       {
         "text": "Vì các con đang ở với ông bà.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xu hướng 'nghỉ việc trả thù' của Gen Z Mỹ",
+    "content": "Nhiều nhân viên Gen Z tại Mỹ đang theo xu hướng 'nghỉ việc trả thù', tức là họ cố tình xin nghỉ việc vào những thời điểm bận rộn nhất của công ty để gây rối loạn cho doanh nghiệp. Các nhân viên này thường nghỉ việc mà không thông báo trước, phản ánh sự bất mãn với cách quản lý và điều kiện làm việc. Theo khảo sát, 65% nhân viên cảm thấy mất động lực trong công việc, trong khi 83% Gen Z đang phải đối mặt với tình trạng kiệt sức, dẫn đến việc nghỉ việc như một cách phản kháng. Các chuyên gia khuyên rằng thay vì bỏ việc một cách bốc đồng, nhân viên nên tìm cách giao tiếp cởi mở với cấp trên.",
+    "link": "https://vnexpress.net/xu-huong-nghi-viec-tra-thu-cua-gen-z-my-4863307.html",
+    "cat": "thoi-su",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Xu hướng 'nghỉ việc trả thù' của Gen Z Mỹ có nguyên nhân gì?",
+    "answers": [
+      {
+        "text": "Sự bất mãn với cách quản lý",
+        "correct": true
+      },
+      {
+        "text": "Thiếu cơ hội thăng tiến",
+        "correct": false
+      },
+      {
+        "text": "Mong muốn tìm kiếm việc làm mới",
+        "correct": false
+      },
+      {
+        "text": "Chỉ đơn giản là thích nghỉ việc",
         "correct": false
       }
     ]
@@ -2625,33 +2768,6 @@
     ]
   },
   {
-    "title": "6 mẹo giúp bỏ thuốc lá",
-    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
-    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
-    "answers": [
-      {
-        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
-        "correct": false
-      },
-      {
-        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần phải có sự hỗ trợ từ người khác.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "GAC tung ưu đãi ba dòng xe trong tháng 3",
     "content": "GAC Motor Việt Nam vừa công bố chương trình ưu đãi cho ba dòng xe gồm M6 Pro, M8 và GS8 trong tháng 3. Khách hàng mua M6 Pro sẽ nhận 7 năm bảo hành, miễn phí dịch vụ cứu hộ 24/7 và thêm đồng hồ thông minh cho phiên bản 1.5T GL. M8 cũng có các ưu đãi tương tự, với quà tặng tiền mặt cho bản GL Master, trong khi GS8 được miễn lệ phí trước bạ và hưởng chính sách bảo hành như trên.",
     "link": "https://vnexpress.net/gac-tung-uu-dai-ba-dong-xe-trong-thang-3-4863400.html",
@@ -2674,6 +2790,33 @@
       },
       {
         "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 mẹo giúp bỏ thuốc lá",
+    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
+    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
+    "answers": [
+      {
+        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
+        "correct": false
+      },
+      {
+        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
+        "correct": false
+      },
+      {
+        "text": "Không cần phải có sự hỗ trợ từ người khác.",
         "correct": false
       }
     ]
